blog-bt/infra/k8s/event-bus-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels: # posts-depl va a tomar como suyos todos los pods que tengan una etiqueta app: post
      app: event-bus
  template: # me ayuda a definir metadata a los objetos del deployment
    metadata:
      labels: #agrego una etiqueta a los recursos que estan en deployment
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: bantrab/ms-event-bus
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  #type: NodePort
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4000
      targetPort: 4000
   #   nodePort: 30000
