blog-bt/infra/k8s/query-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels: # query-depl va a tomar como suyos todos los pods que tengan una etiqueta app: post
      app: query
  template: # me ayuda a definir metadata a los objetos del deployment
    metadata:
      labels: #agrego una etiqueta a los recursos que estan en deployment
        app: query
    spec:
      containers:
        - name: query
          image: bantrab/ms-query
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  #type: NodePort
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 4000
      targetPort: 4000
   #   nodePort: 30000
