blog-bt/infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: post.com
      http:
        paths:
          - path: /posts/create
            pathType: ImplementationSpecific
            backend:
              service:
                name: posts-srv
                port: 4000
          - path: /posts
            pathType: ImplementationSpecific
            backend:
              service:
                name: query-srv
                port: 4002
          - path: /posts/?(.*)/comments
            pathType: ImplementationSpecific
            backend:
              service:
                name: comments-srv
                port: 4001
